k8s/base/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-internal
  namespace: vault
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: vault
  ports:
    - name: api
      port: 8200
      targetPort: 8200
    - name: cluster
      port: 8201
      targetPort: 8201
